--- a/src/styles/_settings.variables.scss
+++ b/src/styles/_settings.variables.scss
@@ -3,13 +3,17 @@
 \* ------------------------------------ */
 
 $max-width: 1200px;
+$device-width: 375px;
+$device-height: 812px;
 
 /**
  * Theme Colors
  */
 $c-pink: #ffcbdc;
 $c-maroon: #401823;
+$c-maroon--light: #512432;
 $c-red: #f22e38;
+$c-white: #fff;
 $c-black: #000;
 
 /**
@@ -21,8 +25,8 @@ $ff-font--serif: serif;
 $ff-font--monospace: Menlo, Monaco, "Courier New", "Courier", monospace;
 
 // Theme typefaces
-$ff-font--primary: $ff-font;
-$ff-font--secondary: $ff-font--serif;
+$font-primary: $ff-font;
+$font-secondary: $ff-font--serif;
 
 /**
  * Common Breakpoints
@@ -64,23 +68,29 @@ $space-quad: $space * 4;
  * Native Custom Properties
  */
 :root {
-  --body-font-size: 16px;
-  --font-size-s: 16px;
-  --font-size-m: 20px;
-  --font-size-l: 22px;
+  --body-font-size: 18px;
+  --font-size-xs: 11px;
+  --font-size-s: 17px;
+  --font-size-m: 22px;
+  --font-size-l: 7vw;
+  --font-size-xl: 13vw;
 }
 
 // Medium Breakpoint
 @media screen and (min-width: 700px) {
   :root {
-    --font-size-s: 18px;
+    --font-size-xs: 11px;
+    --font-size-s: 17px;
     --font-size-m: 22px;
-    --font-size-l: 24px;
+    --font-size-l: 29px;
+    --font-size-xl: 54px;
   }
 }
 
-$body-font-size: var(--body-font-size, 16px);
-$font-size-s: var(--font-size-s, 18px);
+$body-font-size: var(--body-font-size, 18px);
+$font-size-xs: var(--font-size-xs, 13px);
+$font-size-s: var(--font-size-s, 19px);
 $font-size-m: var(--font-size-m, 22px);
-$font-size-l: var(--font-size-l, 24px);
+$font-size-l: var(--font-size-l, 39px);
+$font-size-xl: var(--font-size-xl, 64px);
 
