--- a/src/styles/_tools.mixins.scss
+++ b/src/styles/_tools.mixins.scss
@@ -7,11 +7,143 @@
  */
 @mixin p {
   line-height: 1.5;
-  font-family: $ff-font;
+  font-family: $font-primary;
   font-size: $body-font-size;
 
   @media print {
     font-size: 12px;
     line-height: 1.3;
   }
+}
+
+span + span {
+  margin-left: $space-quarter;
+}
+
+@mixin u-strike {
+  position: relative;
+  display: contents;
+
+  span {
+    position: relative;
+    display: inline-flex;
+    flex-wrap: wrap;
+    margin-right: $space-quarter;
+    margin-left: 0;
+
+    &:last-child {
+      margin-right: 0;
+    }
+
+    &::after {
+      content: "";
+      z-index: 2;
+      display: flex;
+      position: absolute;
+      top: 3px;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 322.2 8.88'%3E%3Cpath d='M292.05,0h8.47L308,.44l5.76.77,4.75,1.2L322.2,4l-4.74,3.39L310.69,7l-6.44-.87H259.86l-11.51-.66-10.17.33-6.77-.55L224,5.48l-9.49-.22L205,5.81H152.12l-8.47-.33-20,.66-11.52-.33-14.9,1L85,6.14l-7.79.65H63.36L58.27,7l-7.79.66-14.9.44H22.36l-9.49.77L6.44,8.11,1.36,6.47,0,4.49l3.73-2,5.76.22,3.38,1h13.9L41,4.05l13.21-.32,19.31-1,14.23.33H100l12.53-.66h53.87l13.22.33h37.61l11.51-.66,24.74.77h30.15l4.07-1.32Z' fill='%23f22e38'/%3E%3C/svg%3E");
+      background-repeat: no-repeat;
+      background-size: auto 5px;
+      background-position: left center;
+    }
+
+    &::before {
+      content: "";
+      z-index: 2;
+      display: flex;
+      position: absolute;
+      top: 3px;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 322.2 8.88'%3E%3Cpath d='M292.05,0h8.47L308,.44l5.76.77,4.75,1.2L322.2,4l-4.74,3.39L310.69,7l-6.44-.87H259.86l-11.51-.66-10.17.33-6.77-.55L224,5.48l-9.49-.22L205,5.81H152.12l-8.47-.33-20,.66-11.52-.33-14.9,1L85,6.14l-7.79.65H63.36L58.27,7l-7.79.66-14.9.44H22.36l-9.49.77L6.44,8.11,1.36,6.47,0,4.49l3.73-2,5.76.22,3.38,1h13.9L41,4.05l13.21-.32,19.31-1,14.23.33H100l12.53-.66h53.87l13.22.33h37.61l11.51-.66,24.74.77h30.15l4.07-1.32Z' fill='%23f22e38'/%3E%3C/svg%3E");
+      background-repeat: no-repeat;
+      background-size: auto 5px;
+      background-position: right center;
+    }
+  }
+}
+
+.u-strike {
+  @include u-strike;
+}
+
+@mixin u-underline {
+  position: relative;
+  display: contents;
+
+  span {
+    position: relative;
+    display: inline-flex;
+    flex-wrap: wrap;
+    margin-right: $space-quarter;
+    margin-left: 0;
+    color: $c-red;
+
+    &:last-child {
+      margin-right: 0;
+    }
+
+    &::after {
+      content: "";
+      z-index: 0;
+      display: flex;
+      position: absolute;
+      top: 3px;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 322.2 8.88'%3E%3Cpath d='M292.05,0h8.47L308,.44l5.76.77,4.75,1.2L322.2,4l-4.74,3.39L310.69,7l-6.44-.87H259.86l-11.51-.66-10.17.33-6.77-.55L224,5.48l-9.49-.22L205,5.81H152.12l-8.47-.33-20,.66-11.52-.33-14.9,1L85,6.14l-7.79.65H63.36L58.27,7l-7.79.66-14.9.44H22.36l-9.49.77L6.44,8.11,1.36,6.47,0,4.49l3.73-2,5.76.22,3.38,1h13.9L41,4.05l13.21-.32,19.31-1,14.23.33H100l12.53-.66h53.87l13.22.33h37.61l11.51-.66,24.74.77h30.15l4.07-1.32Z' fill='%23f22e38'/%3E%3C/svg%3E");
+      background-repeat: no-repeat;
+      background-size: auto 5px;
+      background-position: left bottom;
+    }
+
+    &::before {
+      content: "";
+      z-index: 0;
+      display: flex;
+      position: absolute;
+      top: 3px;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 322.2 8.88'%3E%3Cpath d='M292.05,0h8.47L308,.44l5.76.77,4.75,1.2L322.2,4l-4.74,3.39L310.69,7l-6.44-.87H259.86l-11.51-.66-10.17.33-6.77-.55L224,5.48l-9.49-.22L205,5.81H152.12l-8.47-.33-20,.66-11.52-.33-14.9,1L85,6.14l-7.79.65H63.36L58.27,7l-7.79.66-14.9.44H22.36l-9.49.77L6.44,8.11,1.36,6.47,0,4.49l3.73-2,5.76.22,3.38,1h13.9L41,4.05l13.21-.32,19.31-1,14.23.33H100l12.53-.66h53.87l13.22.33h37.61l11.51-.66,24.74.77h30.15l4.07-1.32Z' fill='%23f22e38'/%3E%3C/svg%3E");
+      background-repeat: no-repeat;
+      background-size: auto 5px;
+      background-position: right bottom;
+    }
+  }
+}
+
+.u-underline {
+  @include u-underline;
+}
+
+@mixin u-xout {
+  position: relative;
+  display: inline-flex;
+
+  &::after {
+    content: "";
+    z-index: 2;
+    display: flex;
+    position: absolute;
+    top: 3px;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 71.34 67.9'%3E%3Cpath d='M35.75.13l.66,2.4-1.82,7.84v4.68l2.48,15.42,4.64-4.42,6.62-4.55L51,18.08l6-3.54,6-4,5.3-2.91,2-.38,1.16.12-.83,2.79L68.36,12,62.73,15.3l-3.48,3.29L55.12,21.5l-.5,1.39L44.19,31l-4.3,3.67-2,2,.5,4.55V46l.83,5.31,3.14,10,.5,2.91-3.15,1.39-5.13-1.39-3-.38L33.1,61.2V57.91l-.66-7.2-1-6.07-.66-1L28.63,45l-1.49,2.65-3.47,1.65-1.16,1.51v.38l-4,2.66-2.82,4.3L13.9,60.06l-2.15,1.39.17.89-2,2.28-.66,2.15L6.62,67.9l-3.81-1L0,62.85l4.63-3.92,4.14-4.3,4.47-4.05,2.48-1.9L18.54,47l1.32-2.91L22.18,42l5.3-3.29,2-1.89.83-2.53L29,30.09V25.54L27.64,15.05V9.86L27.14,7,25.82,2.78,27.14,1l3.31-1,3.81.76Z' fill='%23f22e38'/%3E%3C/svg%3E");
+    background-repeat: no-repeat;
+    background-size: 100% auto;
+    background-position: center center;
+    transform: scale(1.5);
+  }
+}
+
+.u-xout {
+  @include u-xout;
 }
