--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -25,6 +25,7 @@
 @import "modifier.spacing";
 @import "modifier.colors";
 @import "modifier.animations";
+@import "modifier.fonts";
 
 /* ------------------------------------ *\
     $OBJECTS
