--- a/src/styles/_base.main.scss
+++ b/src/styles/_base.main.scss
@@ -15,6 +15,18 @@ body {
     padding: $space;
     min-height: 100vh;
   }
+
+  &::before {
+    content: "";
+    display: block;
+    width: 100vw;
+    height: 100vh;
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: 0;
+    background-color: $c-pink;
+  }
 }
 
 .l-main {
