--- a/src/styles/_modifier.animations.scss
+++ b/src/styles/_modifier.animations.scss
@@ -5,6 +5,10 @@
   animation-delay: 1s;
 }
 
+.u-animation__delay-1s {
+  animation-delay: 1s;
+}
+
 .u-animation__delay-1-5s {
   animation-delay: 1.5s;
 }
@@ -23,8 +27,35 @@
   }
 }
 
-@keyframes width {
-  100% {
-    width: 100%;
+@keyframes scaleInHorLeft {
+  0% {
+    transform: scaleX(0);
+    transform-origin: 0% 0%;
+    opacity: 1;
   }
+  100% {
+    transform: scaleX(1);
+    transform-origin: 0% 0%;
+    opacity: 1;
+  }
+}
+
+@keyframes fadeInUp {
+  from {
+    opacity: 0;
+    transform: translate3d(0, 10px, 0);
+  }
+  to {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
+  }
+}
+
+@mixin animate__fade-in-up {
+  animation-name: fadeInUp;
+  animation-duration: 0.5s;
+}
+
+.animate__fade-in-up {
+  @include animate__fade-in-up;
 }
