--- a/src/styles/_objects.buttons.scss
+++ b/src/styles/_objects.buttons.scss
@@ -13,28 +13,17 @@
   color: $color;
   padding: 0 $space-double;
   transition: $transition-all;
+  width: 100%;
   height: 50px;
   line-height: 50px;
   border-radius: 50px;
   white-space: nowrap;
-  min-width: 220px;
+  text-transform: capitalize;
 
   &:focus,
   &:hover {
     color: $color-hover;
     background-color: $bg-color-hover;
-  }
-
-  &:disabled {
-    padding: 0;
-    border-radius: 0;
-    color: $c-pink;
-    pointer-events: none;
-    background-color: transparent;
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 762.18 7.32'%3E%3Cpath d='M690.85,0h20l17.63.36L742.14,1l11.22,1,8.82,1.26L751,6.05l-16-.27L719.7,5.06h-105l-27.25-.54-24,.27-16-.45-17.63.18-22.44-.18-22.44.45h-125l-20-.27-47.28.54-27.25-.27L230,5.6l-28.86-.54-18.43.54H149.87l-12,.18-18.43.54-35.27.37H52.9l-22.44.63L15.23,6.69l-12-1.36L0,3.7,8.82,2.08l13.62.18,8,.81H63.31L97,3.34l31.25-.27,45.68-.81,33.67.27h28.85L266.08,2H393.51l31.26.27h89L541,1.72l58.5.63h71.33l9.62-1.09Z' fill='%23f22e38'/%3E%3C/svg%3E");
-    background-repeat: no-repeat;
-    background-size: 100% auto;
-    background-position: bottom 10px center;
   }
 }
 
@@ -43,28 +32,15 @@
 }
 
 @mixin o-button--secondary {
-  @include o-button($c-pink, $c-maroon, $c-pink, $c-maroon);
+  @include o-button(transparent, $c-pink, $c-red, $c-pink);
 
-  border: 1px solid $c-maroon;
+  border: 1px solid $c-pink;
 }
 
 @mixin o-button--tertiary {
-  @include o-button($c-maroon--light, $c-pink, $c-maroon, $c-pink);
+  @include o-button($c-pink, $c-maroon, $c-pink, $c-maroon);
 
-  padding: 0 $space;
-  border-top: 1px solid $c-pink;
-  border-radius: 0;
-  width: 100%;
-
-  &.is-active {
-    border-top-color: $c-red;
-    background-color: $c-red;
-    color: $c-pink;
-
-    + button {
-      border-top-color: $c-red;
-    }
-  }
+  border: 1px solid $c-maroon;
 }
 
 .o-button {
