--- a/src/styles/_tools.mixins.scss
+++ b/src/styles/_tools.mixins.scss
@@ -20,7 +20,7 @@ span + span {
   margin-left: $space-quarter;
 }
 
-@mixin u-strike {
+@mixin span-style {
   position: relative;
   display: contents;
 
@@ -35,36 +35,42 @@ span + span {
       margin-right: 0;
     }
 
-    &::after {
-      content: "";
-      z-index: 2;
-      display: flex;
-      position: absolute;
-      top: 3px;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 322.2 8.88'%3E%3Cpath d='M292.05,0h8.47L308,.44l5.76.77,4.75,1.2L322.2,4l-4.74,3.39L310.69,7l-6.44-.87H259.86l-11.51-.66-10.17.33-6.77-.55L224,5.48l-9.49-.22L205,5.81H152.12l-8.47-.33-20,.66-11.52-.33-14.9,1L85,6.14l-7.79.65H63.36L58.27,7l-7.79.66-14.9.44H22.36l-9.49.77L6.44,8.11,1.36,6.47,0,4.49l3.73-2,5.76.22,3.38,1h13.9L41,4.05l13.21-.32,19.31-1,14.23.33H100l12.53-.66h53.87l13.22.33h37.61l11.51-.66,24.74.77h30.15l4.07-1.32Z' fill='%23f22e38'/%3E%3C/svg%3E");
-      background-repeat: no-repeat;
-      background-size: auto 5px;
-      background-position: left center;
-      overflow: hidden;
-    }
-
     &::before {
       content: "";
-      z-index: 2;
+      z-index: 0;
       display: flex;
       position: absolute;
-      top: 3px;
+      top: 0;
       left: 0;
       width: 100%;
       height: 100%;
-      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 322.2 8.88'%3E%3Cpath d='M292.05,0h8.47L308,.44l5.76.77,4.75,1.2L322.2,4l-4.74,3.39L310.69,7l-6.44-.87H259.86l-11.51-.66-10.17.33-6.77-.55L224,5.48l-9.49-.22L205,5.81H152.12l-8.47-.33-20,.66-11.52-.33-14.9,1L85,6.14l-7.79.65H63.36L58.27,7l-7.79.66-14.9.44H22.36l-9.49.77L6.44,8.11,1.36,6.47,0,4.49l3.73-2,5.76.22,3.38,1h13.9L41,4.05l13.21-.32,19.31-1,14.23.33H100l12.53-.66h53.87l13.22.33h37.61l11.51-.66,24.74.77h30.15l4.07-1.32Z' fill='%23f22e38'/%3E%3C/svg%3E");
+      background-size: 100% 5px;
       background-repeat: no-repeat;
-      background-size: auto 5px;
-      background-position: right center;
       overflow: hidden;
+    }
+  }
+
+  span:nth-child(even) {
+    &::before {
+      background-image: url("../assets/stroke-1.png");
+    }
+  }
+
+  span:nth-child(odd) {
+    &::before {
+      background-image: url("../assets/stroke-2.png");
+    }
+  }
+}
+
+@mixin u-strike {
+  @include span-style;
+
+  span {
+    &::before {
+      top: 3px;
+      background-size: 100% 5px;
+      background-position: right center;
     }
   }
 }
@@ -74,51 +80,14 @@ span + span {
 }
 
 @mixin u-underline {
-  position: relative;
-  display: contents;
+  @include span-style;
 
   span {
-    position: relative;
-    display: inline-flex;
-    flex-wrap: wrap;
-    margin-right: $space-quarter;
-    margin-left: 0;
     color: $c-red;
 
-    &:last-child {
-      margin-right: 0;
-    }
-
-    &::after {
-      content: "";
-      z-index: 0;
-      display: flex;
-      position: absolute;
-      top: 3px;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 322.2 8.88'%3E%3Cpath d='M292.05,0h8.47L308,.44l5.76.77,4.75,1.2L322.2,4l-4.74,3.39L310.69,7l-6.44-.87H259.86l-11.51-.66-10.17.33-6.77-.55L224,5.48l-9.49-.22L205,5.81H152.12l-8.47-.33-20,.66-11.52-.33-14.9,1L85,6.14l-7.79.65H63.36L58.27,7l-7.79.66-14.9.44H22.36l-9.49.77L6.44,8.11,1.36,6.47,0,4.49l3.73-2,5.76.22,3.38,1h13.9L41,4.05l13.21-.32,19.31-1,14.23.33H100l12.53-.66h53.87l13.22.33h37.61l11.51-.66,24.74.77h30.15l4.07-1.32Z' fill='%23f22e38'/%3E%3C/svg%3E");
-      background-repeat: no-repeat;
-      background-size: auto 5px;
-      background-position: left bottom;
-      overflow: hidden;
-    }
-
     &::before {
-      content: "";
-      z-index: 0;
-      display: flex;
-      position: absolute;
-      top: 3px;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 322.2 8.88'%3E%3Cpath d='M292.05,0h8.47L308,.44l5.76.77,4.75,1.2L322.2,4l-4.74,3.39L310.69,7l-6.44-.87H259.86l-11.51-.66-10.17.33-6.77-.55L224,5.48l-9.49-.22L205,5.81H152.12l-8.47-.33-20,.66-11.52-.33-14.9,1L85,6.14l-7.79.65H63.36L58.27,7l-7.79.66-14.9.44H22.36l-9.49.77L6.44,8.11,1.36,6.47,0,4.49l3.73-2,5.76.22,3.38,1h13.9L41,4.05l13.21-.32,19.31-1,14.23.33H100l12.53-.66h53.87l13.22.33h37.61l11.51-.66,24.74.77h30.15l4.07-1.32Z' fill='%23f22e38'/%3E%3C/svg%3E");
-      background-repeat: no-repeat;
-      background-size: auto 5px;
+      top: 2px;
       background-position: right bottom;
-      overflow: hidden;
     }
   }
 }
