--- a/src/styles/_modifier.animations.scss
+++ b/src/styles/_modifier.animations.scss
@@ -1,24 +1,13 @@
 .u-animation__draw {
   stroke-dasharray: 2000;
   stroke-dashoffset: 2000;
-  animation: draw 1s linear forwards;
-  animation-delay: 1s;
+  animation: draw 1s ease-in forwards;
 }
 
-.u-animation__delay-1s {
-  animation-delay: 1s;
-}
-
-.u-animation__delay-1-5s {
-  animation-delay: 1.5s;
-}
-
-.u-animation__delay-2s {
-  animation-delay: 2s;
-}
-
-.u-animation__delay-3s {
-  animation-delay: 3s;
+@for $i from 1 to 10 {
+  .u-animation__delay *:nth-child(#{$i}) {
+    animation-delay: ($i * 0.25s) + 0.5s;
+  }
 }
 
 @keyframes draw {
@@ -54,6 +43,7 @@
 @mixin animate__fade-in-up {
   animation-name: fadeInUp;
   animation-duration: 0.5s;
+  animation-fill-mode: backwards
 }
 
 .animate__fade-in-up {
