--- a/src/styles/_objects.headings.scss
+++ b/src/styles/_objects.headings.scss
@@ -55,7 +55,7 @@ h6 {
   font-size: $font-size-s;
   font-weight: 600;
   font-style: normal;
-  letter-spacing: 1px;
+  letter-spacing: normal;
   line-height: 1.4;
 }
 
