--- a/src/styles/_modifier.animations.scss
+++ b/src/styles/_modifier.animations.scss
@@ -1,6 +1,7 @@
 .u-animation__draw {
   stroke-dasharray: 2000;
   stroke-dashoffset: 2000;
+  -webkit-animation: draw 1s ease-in forwards;
   animation: draw 1s ease-in forwards;
 }
 
@@ -29,21 +30,42 @@
   }
 }
 
+@keyframes slideInUp {
+  0% {
+    transform: translateY(1000px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+@keyframes slideOutDown {
+  0% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+  100% {
+    transform: translateY(1000px);
+    opacity: 0;
+  }
+}
+
 @keyframes fadeInUp {
-  from {
+  0% {
     opacity: 0;
     transform: translate3d(0, 10px, 0);
   }
-  to {
+  100% {
     opacity: 1;
     transform: translate3d(0, 0, 0);
   }
 }
 
 @mixin animate__fade-in-up {
-  animation-name: fadeInUp;
-  animation-duration: 0.5s;
-  animation-fill-mode: backwards
+  -webkit-animation: fadeInUp 0.5s backwards;
+  animation: fadeInUp 0.5s backwards;
 }
 
 .animate__fade-in-up {
