--- a/src/styles/_tools.mixins.scss
+++ b/src/styles/_tools.mixins.scss
@@ -17,7 +17,10 @@
 }
 
 span + span {
-  margin-left: $space-quarter;
+  &::before {
+    content: "\00a0";
+    white-space: pre;
+  }
 }
 
 @mixin span-style {
@@ -44,6 +47,7 @@ span + span {
       left: 0;
       width: 100%;
       height: 100%;
+      -webkit-background-size: 100% 5px;
       background-size: 100% 5px;
       background-repeat: no-repeat;
       overflow: hidden;
@@ -69,6 +73,7 @@ span + span {
   span {
     &::before {
       top: 3px;
+      -webkit-background-size: 100% 5px;
       background-size: 100% 5px;
       background-position: right center;
     }
@@ -117,7 +122,7 @@ span + span {
     z-index: 2;
     display: flex;
     position: absolute;
-    top: 3px;
+    top: 1px;
     left: 0;
     width: 100%;
     height: 100%;
