--- a/src/styles/_modifier.animations.scss
+++ b/src/styles/_modifier.animations.scss
@@ -5,6 +5,10 @@
   animation: draw 1s ease-in forwards;
 }
 
+.u-animation__delay-1-5s {
+  animation-delay: 1.5s;
+}
+
 @for $i from 1 to 10 {
   .u-animation__delay *:nth-child(#{$i}) {
     animation-delay: ($i * 0.25s) + 0.5s;
