--- a/src/styles/_modifier.fonts.scss
+++ b/src/styles/_modifier.fonts.scss
@@ -1,7 +1,6 @@
 @font-face {
   font-family: 'Domaine Display Medium';
-  src: url('../assets/fonts/domaine-display-web-medium.woff2') format('woff2'),
-       url('../assets/fonts/domaine-display-web-medium.woff') format('woff');
+  src: url("../assets/fonts/domaine-display-web-medium.woff2") format("woff2"), url("../assets/fonts/domaine-display-web-medium.woff") format("woff");
   font-weight: normal;
   font-style: normal;
 }
