--- a/src/styles/_component.panel.scss
+++ b/src/styles/_component.panel.scss
@@ -15,6 +15,7 @@
     overflow: visible;
   }
 
+
   > * {
     display: flex;
     flex-direction: column;
@@ -50,6 +51,7 @@
       flex-basis: calc((#{$device-height} - #{$space-double}) / 2);
     }
 
+
     &-body {
       width: 100%;
       padding-bottom: $space;
@@ -67,7 +69,7 @@
       height: auto;
       max-width: $xsmall;
 
-      @include media('<=xsmall') {
+      @include media("<=xsmall") {
         max-width: 290px;
         max-height: 200px;
         width: auto;
@@ -245,6 +247,7 @@
 
     div {
       @include u-underline;
+
       line-height: 1.2;
     }
   }
@@ -294,7 +297,7 @@
     }
 
     .u-underline {
-      @include media('<=small') {
+      @include media("<=small") {
         display: contents;
         line-height: 0.7;
 
