--- a/src/styles/_modifier.animations.scss
+++ b/src/styles/_modifier.animations.scss
@@ -11,7 +11,7 @@
 
 @for $i from 1 to 10 {
   .u-animation__delay *:nth-child(#{$i}) {
-    animation-delay: ($i * 0.25s) + 0.5s;
+    animation-delay: $i * 0.25s + 0.5s;
   }
 }
 
@@ -27,6 +27,7 @@
     transform-origin: 0% 0%;
     opacity: 1;
   }
+
   100% {
     transform: scaleX(1);
     transform-origin: 0% 0%;
@@ -39,6 +40,7 @@
     transform: translateY(1000px);
     opacity: 0;
   }
+
   100% {
     transform: translateY(0);
     opacity: 1;
@@ -50,6 +52,7 @@
     transform: translateY(0);
     opacity: 1;
   }
+
   100% {
     transform: translateY(1000px);
     opacity: 0;
@@ -61,6 +64,7 @@
     opacity: 0;
     transform: translate3d(0, 10px, 0);
   }
+
   100% {
     opacity: 1;
     transform: translate3d(0, 0, 0);
